# speedread-rs

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.adoc  flake.nix  shell.nix
misc/: fsm.dot
src/: event.rs  main.rs
