[package]
name = "speedread"
version = "0.1.0"
authors = ["Michael Hueschen <m@mhueschen.space>"]
edition = "2018"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.10"
termion = "1.5"
rand = "0.7"
structopt = "0.3.15"

[[bin]]
name = "srrs"
path = "src/main.rs"
